<resources>
    <string name="app_name">CrimeIntent</string>
    <string name="crime_title_hint">Введите заголовок преступления.</string>
    <string name="crime_title_label">Заголовок</string>
    <string name="crime_details_label">Детали</string>
    <string name="crime_solved_label">Раскрыто</string>
    <string name="crime_unsolved_label">Не Раскрыто</string>
    <string name="date_picker_title">Дата преступления</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_suspect_text">Подозреваемый %1$s</string>
    <string name="crime_no_suspect_text">Нет подозреваемого</string>
    <string name="crime_report_text">Отправить отчет о преступлении</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
</resources>